--- a/AnalizadorLexico/AnalizadorLexico.csproj
+++ b/AnalizadorLexico/AnalizadorLexico.csproj
@@ -47,8 +47,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AFD.cs" />
     <Compile Include="AFN.cs" />
     <Compile Include="Estado.cs" />
+    <Compile Include="EstadoIdj.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
