Implementación de métodos en AFN,  revision corta AFD, cambios mínimos AnalizLexico
Existen errores, tambien se implementó edoAnalizLexico.cs, pero no contiene información.

--- a/AnalizadorLexico/AnalizadorLexico.csproj
+++ b/AnalizadorLexico/AnalizadorLexico.csproj
@@ -49,6 +49,8 @@
   <ItemGroup>
     <Compile Include="AFD.cs" />
     <Compile Include="AFN.cs" />
+    <Compile Include="AnalizLexico.cs" />
+    <Compile Include="edoAnalizLexico.cs" />
     <Compile Include="Estado.cs" />
     <Compile Include="EstadoIdj.cs" />
     <Compile Include="Form1.cs">
