--- a/AnalizadorLexico/AnalizadorLexico.csproj
+++ b/AnalizadorLexico/AnalizadorLexico.csproj
@@ -53,16 +53,88 @@
     <Compile Include="edoAnalizLexico.cs" />
     <Compile Include="Estado.cs" />
     <Compile Include="EstadoIdj.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Compilador.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Compilador.Designer.cs">
+      <DependentUpon>Compilador.cs</DependentUpon>
+    </Compile>
+    <Compile Include="forms\AnalizCadena.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\AnalizCadena.Designer.cs">
+      <DependentUpon>AnalizCadena.cs</DependentUpon>
+    </Compile>
+    <Compile Include="forms\Basico.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\Basico.Designer.cs">
+      <DependentUpon>Basico.cs</DependentUpon>
+    </Compile>
+    <Compile Include="forms\CerraduraKleene.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\CerraduraKleene.Designer.cs">
+      <DependentUpon>CerraduraKleene.cs</DependentUpon>
+    </Compile>
+    <Compile Include="forms\CerraduraPos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\CerraduraPos.Designer.cs">
+      <DependentUpon>CerraduraPos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="forms\Concatenar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\Concatenar.Designer.cs">
+      <DependentUpon>Concatenar.cs</DependentUpon>
+    </Compile>
+    <Compile Include="forms\ConverAFNAFD.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\ConverAFNAFD.Designer.cs">
+      <DependentUpon>ConverAFNAFD.cs</DependentUpon>
+    </Compile>
+    <Compile Include="forms\ERAFN.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\ERAFN.Designer.cs">
+      <DependentUpon>ERAFN.cs</DependentUpon>
+    </Compile>
+    <Compile Include="forms\Opcional.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\Opcional.Designer.cs">
+      <DependentUpon>Opcional.cs</DependentUpon>
+    </Compile>
+    <Compile Include="forms\ProbarALex.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\ProbarALex.Designer.cs">
+      <DependentUpon>ProbarALex.cs</DependentUpon>
+    </Compile>
+    <Compile Include="forms\UnionALex.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\UnionALex.Designer.cs">
+      <DependentUpon>UnionALex.cs</DependentUpon>
+    </Compile>
+    <Compile Include="forms\Unir.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\Unir.Designer.cs">
+      <DependentUpon>Unir.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimbolosEspeciales.cs" />
     <Compile Include="Transicion.cs" />
+    <EmbeddedResource Include="Compilador.resx">
+      <DependentUpon>Compilador.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="forms\Basico.resx">
+      <DependentUpon>Basico.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -86,5 +158,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
