--- a/AnalizadorLexico/AnalizadorLexico.csproj
+++ b/AnalizadorLexico/AnalizadorLexico.csproj
@@ -53,10 +53,10 @@
     <Compile Include="edoAnalizLexico.cs" />
     <Compile Include="Estado.cs" />
     <Compile Include="EstadoIdj.cs" />
-    <Compile Include="Compilador.cs">
+    <Compile Include="forms\Compilador.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Compilador.Designer.cs">
+    <Compile Include="forms\Compilador.Designer.cs">
       <DependentUpon>Compilador.cs</DependentUpon>
     </Compile>
     <Compile Include="forms\AnalizCadena.cs">
@@ -129,11 +129,26 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimbolosEspeciales.cs" />
     <Compile Include="Transicion.cs" />
-    <EmbeddedResource Include="Compilador.resx">
+    <EmbeddedResource Include="forms\CerraduraKleene.resx">
+      <DependentUpon>CerraduraKleene.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="forms\CerraduraPos.resx">
+      <DependentUpon>CerraduraPos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="forms\Compilador.resx">
       <DependentUpon>Compilador.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="forms\Basico.resx">
       <DependentUpon>Basico.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="forms\Concatenar.resx">
+      <DependentUpon>Concatenar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="forms\Opcional.resx">
+      <DependentUpon>Opcional.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="forms\Unir.resx">
+      <DependentUpon>Unir.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -158,6 +173,26 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\Basico.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Basico.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Union.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Concatenar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Cerradura de Kleene.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Cerradura Positiva.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Opcional.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
