Resolucion de bugs y UI de Analisis de cadena
- Se agrego la UI de analisis de cadena
- Se resolvieron bugs que causaban una mala creacion de un AFD

--- a/AnalizadorLexico/AnalizadorLexico.csproj
+++ b/AnalizadorLexico/AnalizadorLexico.csproj
@@ -52,7 +52,7 @@
     <Compile Include="AnalizLexico.cs" />
     <Compile Include="edoAnalizLexico.cs" />
     <Compile Include="Estado.cs" />
-    <Compile Include="EstadoIdj.cs" />
+    <Compile Include="EdoIj.cs" />
     <Compile Include="forms\Compilador.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -129,6 +129,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimbolosEspeciales.cs" />
     <Compile Include="Transicion.cs" />
+    <EmbeddedResource Include="forms\AnalizCadena.resx">
+      <DependentUpon>AnalizCadena.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="forms\CerraduraKleene.resx">
       <DependentUpon>CerraduraKleene.cs</DependentUpon>
     </EmbeddedResource>
