--- a/AnalizadorLexico/AnalizadorLexico.csproj
+++ b/AnalizadorLexico/AnalizadorLexico.csproj
@@ -51,6 +51,7 @@
     <Compile Include="AFN.cs" />
     <Compile Include="AnalizLexico.cs" />
     <Compile Include="edoAnalizLexico.cs" />
+    <Compile Include="ER_AFN.cs" />
     <Compile Include="Estado.cs" />
     <Compile Include="EdoIj.cs" />
     <Compile Include="forms\Compilador.cs">
@@ -132,6 +133,7 @@
     <Compile Include="forms\Unir.Designer.cs">
       <DependentUpon>Unir.cs</DependentUpon>
     </Compile>
+    <Compile Include="Matrix.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimbolosEspeciales.cs" />
