--- a/AnalizadorLexico/AnalizadorLexico.csproj
+++ b/AnalizadorLexico/AnalizadorLexico.csproj
@@ -50,10 +50,17 @@
     <Compile Include="AFD.cs" />
     <Compile Include="AFN.cs" />
     <Compile Include="AnalizLexico.cs" />
+    <Compile Include="Calculadora.cs" />
     <Compile Include="edoAnalizLexico.cs" />
     <Compile Include="ER_AFN.cs" />
     <Compile Include="Estado.cs" />
     <Compile Include="EdoIj.cs" />
+    <Compile Include="forms\Calculadora.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\Calculadora.Designer.cs">
+      <DependentUpon>Calculadora.cs</DependentUpon>
+    </Compile>
     <Compile Include="forms\Compilador.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -140,6 +147,9 @@
     <Compile Include="Transicion.cs" />
     <EmbeddedResource Include="forms\AnalizCadena.resx">
       <DependentUpon>AnalizCadena.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="forms\Calculadora.resx">
+      <DependentUpon>Calculadora.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="forms\CerraduraKleene.resx">
       <DependentUpon>CerraduraKleene.cs</DependentUpon>
