--- a/AnalizadorLexico/AnalizadorLexico.csproj
+++ b/AnalizadorLexico/AnalizadorLexico.csproj
@@ -116,17 +116,17 @@
     <Compile Include="forms\EvaluadorExpr.Designer.cs">
       <DependentUpon>EvaluadorExpr.cs</DependentUpon>
     </Compile>
+    <Compile Include="forms\MatrixForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\MatrixForm.Designer.cs">
+      <DependentUpon>MatrixForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="forms\Opcional.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="forms\Opcional.Designer.cs">
       <DependentUpon>Opcional.cs</DependentUpon>
-    </Compile>
-    <Compile Include="forms\ProbarALex.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="forms\ProbarALex.Designer.cs">
-      <DependentUpon>ProbarALex.cs</DependentUpon>
     </Compile>
     <Compile Include="forms\UnionALex.cs">
       <SubType>Form</SubType>
@@ -169,8 +169,14 @@
     <EmbeddedResource Include="forms\ConverAFNAFD.resx">
       <DependentUpon>ConverAFNAFD.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="forms\ERAFN.resx">
+      <DependentUpon>ERAFN.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="forms\EvaluadorExpr.resx">
       <DependentUpon>EvaluadorExpr.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="forms\MatrixForm.resx">
+      <DependentUpon>MatrixForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="forms\Opcional.resx">
       <DependentUpon>Opcional.cs</DependentUpon>
